[package]
name = "rprsblink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rprsblink"
test = false
bench = false
harness = false

[[test]]
name = "main"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
rp-pico = "0.8"
sbus-parser = "0.1.0"
# rp2040-boot2 = "0.3.0"
# rp2040-hal = { version = "0.9.0", features = ["defmt", "rt"] }

[dev-dependencies]
defmt-test = "0.3.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
